@@ -1,3 +1,7 @@
+Nov 5, 2002: Alex Burger <alex_b@users.sourceforge.net>
+- Add parameter to play_sound to force playing even if sound is disabled.
+  Used by Test buttons to Preferences - Sound page
+
 Nov 05, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - use gtk functions instead of spaces to make test button look nice
 - update german translation
